--- a/frontend/public/bootstrap.css
+++ b/frontend/public/bootstrap.css
@@ -83,19 +83,19 @@ body {
   background-color: #eee;
 } */
 
-.form-signin {
+.form {
   max-width: 330px;
   padding: 15px;
   margin: 0 auto;
 }
-.form-signin .form-signin-heading,
-.form-signin .checkbox {
+.form .form-heading,
+.form .checkbox {
   margin-bottom: 10px;
 }
-.form-signin .checkbox {
+.form .checkbox {
   font-weight: normal;
 }
-.form-signin .form-control {
+.form .form-control {
   position: relative;
   height: auto;
   -webkit-box-sizing: border-box;
@@ -103,21 +103,21 @@ body {
   padding: 10px;
   font-size: 16px;
 }
-.form-signin .form-control:focus {
+.form .form-control:focus {
   z-index: 2;
 }
-.form-signin .input-top {
+.form .input-top {
   margin-bottom: -1px;
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
 }
-.form-signin .input-bot {
+.form .input-bot {
   margin-bottom: 10px;
   border-top-left-radius: 0;
   border-top-right-radius: 0;
 }
 
-.form-signin .input-base {
+.form .input-base {
   margin-bottom: -1px;
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
